[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "reloadlygcio"
version = "0.0.4a"
description = "Python Async wrapper for the Reloadly API"
authors = [
  { name="flalugli", email="flalugli.dev@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ['python', 'giftcards', 'Reloadly', 'async', 'aiohttp']
license = {text = "Apache License 2.0"}
classifiers=[
        "Development Status :: 1 - Planning",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
    ]

[project.urls]
Homepage = "https://github.com/flalugli/reloadlyio"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
where = ["src"]